# unified_modernization_platform

./: .dockerignore  .gitignore  ARCHITECTURE_DECISIONS.md  DEVELOPER_GUIDE.md  Dockerfile  PLATFORM_OVERVIEW.md  README.md  TECHNICAL_PRIMER.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ADR_COMPENDIUM.md  ARCHITECTURE.md  DOMAIN_ONBOARDING_TEMPLATE.md  EXECUTIVE_GUIDE.md  IMPLEMENTATION_ROADMAP.md  PRODUCT_OPERATIONS_PRIMER.md  TERRAFORM_DEPLOYMENT.md
examples/: domain_config.yaml  gateway_runtime.env.template  search_harness_cases.jsonl
infra/terraform/: README.md  artifact_registry.tf  firestore.tf  iam.tf  locals.tf  outputs.tf  pubsub.tf  run.tf  secrets.tf  services.tf  spanner.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/terraform/sql/: projection_fragments.sql  projection_states.sql
scripts/: run_gateway_harness.ps1
src/unified_modernization/: __init__.py
src/unified_modernization/adapters/: __init__.py  base.py  cosmos_change_feed.py  debezium_cdc.py  firestore_outbox.py  spanner_change_stream.py
src/unified_modernization/backfill/: __init__.py  coordinator.py
src/unified_modernization/config/: __init__.py  loader.py
src/unified_modernization/contracts/: __init__.py  events.py  projection.py
src/unified_modernization/cutover/: __init__.py  bootstrap.py  state_machine.py
src/unified_modernization/gateway/: __init__.py  asgi.py  bootstrap.py  clients.py  evaluation.py  harness.py  http_api.py  odata.py  resilience.py  service.py
src/unified_modernization/observability/: __init__.py  bootstrap.py  opentelemetry.py  telemetry.py
src/unified_modernization/projection/: __init__.py  bootstrap.py  builder.py  publisher.py  runtime.py  store.py
src/unified_modernization/reconciliation/: __init__.py  engine.py
src/unified_modernization/routing/: __init__.py  tenant_policy.py
tests/: test_asgi.py  test_backfill.py  test_config.py  test_cutover.py  test_deployment_harness.py  test_gateway.py  test_http_api.py  test_integrations.py  test_observability.py  test_projection.py  test_projection_runtime.py  test_reconciliation.py  test_routing.py
