[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unified-modernization-platform"
version = "0.1.0"
description = "Implementation starter for a unified Azure to GCP and Elasticsearch modernization platform."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3",
  "PyYAML>=6.0",
  "starlette>=0.37",
  "uvicorn>=0.30",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "mypy>=1.11",
  "ruff>=0.6",
  "bandit>=1.8",
]
gcp = [
  "google-cloud-spanner>=3.49,<4",
  "google-cloud-firestore>=2.18,<3",
]
telemetry = [
  "opentelemetry-api>=1.27,<2",
  "opentelemetry-sdk>=1.27,<2",
  "opentelemetry-exporter-otlp-proto-http>=1.27,<2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 160

[tool.ruff.lint]
select = ["E", "F", "B"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
